feat: updated pricing

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LobbyLoop - Check-in Tablet + Wall Display for Small Businesses</title>
-    <meta name="description" content="Two-screen system: tablet for check-in, TV for promotions. Works on any Android tablet + existing TV. Under $150 hardware. $39/month." />
+    <meta name="description" content="Two-screen system: tablet for check-in, TV for promotions. Works on any device with a browser. As low as ~$80 hardware. $29/month." />
 
     <!-- Open Graph -->
     <meta property="og:title" content="LobbyLoop - Check-in Tablet + Wall Display" />
